# bauman_bot_2

./: pyproject.toml
src/: all_answers.csv  is_ready.csv  main.py  mem.csv
tests/: test_all.py
